<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/register"
    tools:context=".RegisterActivity">

    <ImageView
        android:id="@+id/register_icon"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="113dp"
        android:layout_marginTop="74dp"
        android:layout_marginEnd="148dp"
        app:srcCompat="@drawable/logo" />

    <EditText
        android:id="@+id/register_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/register_icon"
        android:hint="@string/enter_email"
        android:layout_marginTop="30dp"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:background="@drawable/inputs"
        android:padding="10dp"
        android:drawableStart="@drawable/email"
/>

    <EditText
        android:id="@+id/register_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_marginTop="10dp"
        android:hint="@string/enter_password"
        android:inputType="textPassword"
        android:layout_below="@+id/register_email"
        android:background="@drawable/inputs"
        android:padding="10dp"
        android:drawableStart="@drawable/password"
        />
    <EditText
        android:id="@+id/register_confirm_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_marginTop="10dp"
        android:hint="@string/enter_password"
        android:inputType="textPassword"
        android:layout_below="@+id/register_password"
        android:background="@drawable/inputs"
        android:padding="10dp"
        android:drawableStart="@drawable/password"/>

    <Button
        android:id="@+id/register_create_account"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:text="@string/create_account"
        android:layout_below="@+id/register_confirm_password"
        android:layout_marginTop="15dp"
        android:background="@drawable/button"
        android:padding="15dp"
        android:textSize="20sp"
        android:textColor="@android:color/white"
        />
</RelativeLayout>